--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "crypto-js": "^4.2.0",
     "firebase": "^10.7.1",
     "next": "14.0.4",
