--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@reduxjs/toolkit": "^2.0.1",
     "crypto-js": "^4.2.0",
     "firebase": "^10.7.1",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-player": "^2.14.1",
+    "react-redux": "^9.0.4",
     "react-toastify": "^9.1.3",
     "react-video-thumbnail": "^0.1.3"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.1",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
